force-app/main/default/objects/cgcloud__Fund_Transaction_Header__c/cgcloud__Fund_Transaction_Header__c.object-meta.xml
<CustomObject>
    <description>Fund Transaction Header object facilitates creation of multiple Fund transactions in a multiple source/target fund business scenario. This object dictates key fields like fund transaction template. source/target funds for the fund transaction records to be created based on transaction type like Transfer, drawback etc</description>
    <label>Multi-Fund Transaction</label>
    <nameField>
        <displayFormat>FTH-{0000}</displayFormat>
        <label>Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Multi-Fund Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>