force-app/main/default/objects/cgcloud__Fund_Transaction_Header__c/fields/cgcloud__Amount__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Total  fund transaction amounts for the header</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>