force-app/main/default/objects/cgcloud__Fund_Transaction_Header__c/fields/cgcloud__Fund_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund_Description__c</fullName>
    <formula>CASE( cgcloud__Transaction_Type__c , &apos;Drawback&apos;, cgcloud__Target_Fund__r.cgcloud__Description__c , 
cgcloud__Source_Fund__r.cgcloud__Description__c)</formula>
    <label>Fund Description</label>
    <type>Text</type>
</CustomField>