force-app/main/default/objects/cgcloud__Fund_Transaction_Header__c/fields/cgcloud__Fund_Transaction_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund_Transaction_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fund Transaction Template which dictates the behavior of related transactions based on template Transaction Type</description>
    <label>Transaction Template</label>
    <referenceTo>cgcloud__Fund_Transaction_Template__c</referenceTo>
    <relationshipLabel>Fund Transaction Headers</relationshipLabel>
    <relationshipName>Fund_Transaction_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>