force-app/main/default/objects/cgcloud__Fund_Transaction_Header__c/fields/cgcloud__Fund_Transaction_Template_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund_Transaction_Template_Description__c</fullName>
    <description>Description value of Transaction&apos;s related Fund Transaction Template</description>
    <formula>cgcloud__Fund_Transaction_Template__r.cgcloud__Description__c</formula>
    <label>Transaction Description</label>
    <type>Text</type>
</CustomField>