force-app/main/default/objects/cgcloud__Fund_Transaction_Header__c/fields/cgcloud__Source_Fund__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Source_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source Fund to be selected for transactions based on Template Transaction Type</description>
    <label>Source Fund</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>cgcloud__Fund__c.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>$User.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Fund__c</referenceTo>
    <relationshipLabel>Source Fund Transaction Headers</relationshipLabel>
    <relationshipName>Source_FT_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>