force-app/main/default/objects/cgcloud__Fund_Transaction_Header__c/fields/cgcloud__Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Transaction_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date of Transaction</description>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>