force-app/main/default/objects/cgcloud__Fund_Transaction_Header__c/fields/cgcloud__Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Transaction_Type__c</fullName>
    <formula>TEXT(cgcloud__Fund_Transaction_Template__r.cgcloud__Transaction_Type__c)</formula>
    <label>Transaction Type</label>
    <type>Text</type>
</CustomField>