force-app/main/default/objects/cgcloud__Fund_Transaction_Header__c/recordTypes/cgcloud__Adjustment.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Adjustment</fullName>
    <active>true</active>
    <description>Adjustment transactions between multiple funds</description>
    <label>Adjustment</label>
</RecordType>