force-app/main/default/objects/cgcloud__Fund_Transaction_Header__c/recordTypes/cgcloud__Drawback.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Drawback</fullName>
    <active>true</active>
    <description>Drawback transactions with multi source and single target Funds Only</description>
    <label>Drawback</label>
</RecordType>