force-app/main/default/objects/cgcloud__Fund_Transaction_Header__c/recordTypes/cgcloud__Initial.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Initial</fullName>
    <active>true</active>
    <description>Initial transactions with multi Target Funds Only</description>
    <label>Initial</label>
</RecordType>