force-app/main/default/objects/cgcloud__Fund_Transaction_Header__c/recordTypes/cgcloud__Transfer.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Transfer</fullName>
    <active>true</active>
    <description>Transfer transactions with single source and multiple target funds</description>
    <label>Transfer</label>
</RecordType>