force-app/main/default/objects/cgcloud__Fund_Transaction_Header__c/validationRules/cgcloud__Fund_Reference_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Fund_Reference_Read_Only</fullName>
    <active>true</active>
    <description>Transfer/Drawback Transaction Source/Target Fund references cannot be changed</description>
    <errorConditionFormula>AND(
$Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c = FALSE,
OR( AND(RecordType.Name = &apos;Transfer&apos;, ISCHANGED( cgcloud__Source_Fund__c )
), AND(RecordType.Name = &apos;Drawback&apos;, ISCHANGED( cgcloud__Target_Fund__c )
)))</errorConditionFormula>
    <errorMessage>Fund reference cannot be changed</errorMessage>
</ValidationRule>