force-app/main/default/objects/cgcloud__Fund_Transaction_Header__c/validationRules/cgcloud__New_Requires_Status_Pending.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__New_Requires_Status_Pending</fullName>
    <active>true</active>
    <description>All Multi-Fund Transactions, when created, must start off with a status of Pending</description>
    <errorConditionFormula>AND(
$Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c = FALSE,
ISNEW(),
NOT(ISPICKVAL( cgcloud__Status__c, &apos;Pending&apos;))
)</errorConditionFormula>
    <errorMessage>New Transactions must start off with a status of Pending</errorMessage>
</ValidationRule>