force-app/main/default/objects/cgcloud__Fund_Transaction_Header__c/validationRules/cgcloud__Template_Transfer_Sales_Org_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Template_Transfer_Sales_Org_Mismatch</fullName>
    <active>true</active>
    <description>The Transaction Template and Transfer Fund Transaction Source Fund must belong to the same Sales Org</description>
    <errorConditionFormula>AND(ISNEW(),  RecordType.Name = &apos;Transfer&apos;,
TEXT(cgcloud__Fund_Transaction_Template__r.cgcloud__Sales_Org__c) &lt;&gt;  cgcloud__Source_Fund__r.cgcloud__Sales_Org__c,
!$Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c
)</errorConditionFormula>
    <errorMessage>The Transaction Template and Source Fund must belong to the same Sales Org</errorMessage>
</ValidationRule>