force-app/main/default/objects/cgcloud__Fund_Transaction_Header__c/validationRules/cgcloud__Validate_Sales_Organization.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Validate_Sales_Organization</fullName>
    <active>false</active>
    <description>Validation rule to compare source fund sales org against user sales org and target fund sales org</description>
    <errorConditionFormula>OR(cgcloud__Source_Fund__r.cgcloud__Sales_Org__c   &lt;&gt; TEXT( $User.cgcloud__Sales_Org__c ),  cgcloud__Target_Fund__r.cgcloud__Sales_Org__c  &lt;&gt; TEXT( $User.cgcloud__Sales_Org__c )  )</errorConditionFormula>
    <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
</ValidationRule>